<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#00897B"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_1"/>
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/num_2"/>
    </LinearLayout>

    <TextView
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/layout_1"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#80CBC4"
        android:text="@string/etc"
        android:textStyle="bold"
        />

    <Button
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#004D40"
        android:id="@+id/btn_next_1"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:background="@null"
                android:id="@+id/edt_name"
                android:gravity="center"
                android:textSize="15dp"
                android:hint="@string/edt_1"
                android:textColorHint="#ffffff"
                android:layout_width="300dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:background="@null"
                android:id="@+id/edt_phone"
                android:hint="@string/edt_2"
                android:gravity="center"
                android:textSize="15dp"
                android:textColorHint="#ffffff"
                android:layout_width="300dp"
                android:layout_height="50dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:background="@null"
                android:id="@+id/edt_price"
                android:gravity="center"
                android:textSize="15dp"
                android:hint="@string/edt_3"
                android:textColorHint="#ffffff"
                android:layout_width="300dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:background="@null"
                android:id="@+id/edt_place"
                android:hint="@string/edt_4"
                android:gravity="center"
                android:textSize="15dp"
                android:textColorHint="#ffffff"
                android:layout_width="300dp"
                android:layout_height="50dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>