<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#00897B"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_1"/>
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/num_1"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="15dp"
            android:textColor="#80CBC4"
            android:textStyle="bold"
            android:text="계좌 정보를 입력해주세요."/>
        <LinearLayout
            android:layout_marginTop="23dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:background="@null"
                android:id="@+id/edt_bank"
                android:hint="@string/edt_5"
                android:gravity="center"
                android:textSize="15dp"
                android:textColorHint="#ffffff"
                android:layout_width="300dp"
                android:layout_height="50dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:background="@null"
                android:id="@+id/edt_bank_name"
                android:hint="은행명"
                android:gravity="center"
                android:textSize="15dp"
                android:textColorHint="#ffffff"
                android:layout_width="300dp"
                android:layout_height="50dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#004D40"
        android:id="@+id/btn_next_2"
        android:text ="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>