<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#00897B"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.qazpl.entreprenuership.MainActivity">
    <LinearLayout
        android:id="@+id/logo"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/border_line"
        android:orientation="vertical"
        android:layout_width="100dp"
        android:layout_height="100dp">
        <TextView
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2nd" />
        <TextView
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dealer" />
    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="#004D40"
            android:id="@+id/btn_create"
            android:text="@string/create_deal"/>
    </RelativeLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="#ffffff"
        android:text="@string/main_log"/>


    <RelativeLayout
        android:background="@drawable/layout_circular"
        android:layout_marginBottom="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="50dp">
        <EditText
            android:background="@null"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/edt_search"
            android:gravity="center"
            android:textColorHint="#ffffff"
            android:textColor="#eeeeee"
            android:hint="@string/search_partner"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:singleLine="true"
            android:selectAllOnFocus="false"
            android:inputType="text" />
        <Button
            android:id="@+id/btn_search"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/edt_search"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/search_icon"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_current_deal"
        android:layout_margin="10dp"
        android:background="@drawable/mypage"
        android:layout_width="30dp"
        android:layout_height="30dp" />

</RelativeLayout>
